# tree-sitter-wtf

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.wtf  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-wtf.h  tree-sitter-wtf.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_wtf/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWtfTests/: TreeSitterWtfTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
